test/simple/correct/ExprIfTrue.hs
module ExprIfTrue where

main :: Int
main = if x then 3 else 4

x :: Bool
x = True
